[tool.poetry]
name = "vessim"
version = "0" # Poetry requires a version configuration to be present. The poetry-version-plugin extracts the correct version from the git-tag.
description = "A simulator for carbon-aware applications and systems."
keywords = ["simulation", "energy system", "testbed", "carbon-aware computing", "software-in-the-loop"]
authors = ["Philipp Wiesner <wiesner@tu-berlin.de>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/dos-group/vessim"
repository = "https://github.com/dos-group/vessim"
documentation = "https://github.com/dos-group/vessim"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Testing",
  "Topic :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry-version-plugin]
source = "git-tag"

[tool.poetry.urls]
"Bug Reports" = "https://github.com/dos-group/vessim/issues"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
numpy = [
    { version = "^1.22.0", python = "<3.12" },
    { version = "^1.26.0", python = ">=3.12" }
]
pandas = "^2.0.0"
mosaik = "^3.2.0"
mosaik-api-v3 = "^3.0.4"
loguru = "^0.6.0"

# The docopt, used by the mosaik-api causes some issues in current python versions
# This dependency can be deleted once the following issue is resolved by mosaik
# https://gitlab.com/mosaik/api/mosaik-api-python/-/issues/6
docopt-ng = "^0.6.2"

# Optional dependencies (software-in-the-loop)
requests = {version = "^2.26.0", optional = true}
fastapi = {version = "^0.104.0", optional = true}
uvicorn = {version = "^0.23.0", optional = true}

[tool.poetry.extras]
sil = ["requests", "fastapi", "uvicorn"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "*"
types-psutil = "*"
pandas-stubs = "*"
types-requests = "*"
black = "*"
ruff = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
setuptools = "*"
sphinx = "*"
furo = "*"
sphinx-copybutton = "*"
nbsphinx = "*"
pandoc = "*"
ipython = "*"

[build-system]
requires = ["setuptools", "poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99  # Set the maximum characters per line
target-version = ['py38']   # Set python versions that black should format the code for
include = '\.py$'  # Format only python files

[tool.ruff]
line-length = 99  # Set the maximum characters per line (similar to black)
target-version = "py38"  # Set python version for linting (similar to black)
include = ["*.py"]  # Only enable linting for python files (similar to black)

[tool.ruff.lint]
# Enable Ruff to check for issues (https://beta.ruff.rs/docs/rules)
select = [
  "E", "W",  # pycodestyle (error and warning)
  "D",  # docstrings
  "F",  # Pyflakes
  "N",  # variable naming
  #  "B",  # flake8-bugbear
]

# For now the following rules are disabled:
#   D100: Missing docstring in public module
#   D101: Missing docstring in public class
#   D102: Missing docstring in public method
#   D103: Missing docstring in public function
#   D107: Missing docstring in __init__
ignore = ["D100", "D101", "D102", "D103", "D107", "E722"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["D", "E", "W"]
unfixable = ["F"]

[tool.ruff.lint.pydocstyle]
# Configure Ruff to enforce Google-style docstrings when checking documentation
convention = "google"

# Configure mypy to ignore missing imports
[mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    # https://github.com/dateutil/dateutil/issues/1314
    "ignore:datetime.datetime.utcfromtimestamp:DeprecationWarning:dateutil.tz.tz",
]